WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162694
URLParser should ignore tabs in authority
https://bugs.webkit.org/show_bug.cgi?id=162694
Summary
URLParser should ignore tabs in authority
Alex Christensen
Reported
2016-09-28 11:21:17 PDT
URLParser should ignore tabs in authority
Attachments
Patch
(5.22 KB, patch)
2016-09-28 11:25 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(5.21 KB, patch)
2016-09-28 13:06 PDT
,
Alex Christensen
ggaren
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2016-09-28 11:25:40 PDT
Created
attachment 290102
[details]
Patch
WebKit Commit Bot
Comment 2
2016-09-28 11:27:47 PDT
Attachment 290102
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alex Christensen
Comment 3
2016-09-28 13:06:23 PDT
Created
attachment 290108
[details]
Patch
Geoffrey Garen
Comment 4
2016-09-28 13:25:40 PDT
Comment on
attachment 290108
[details]
Patch r=me
Alex Christensen
Comment 5
2016-09-28 14:18:54 PDT
http://trac.webkit.org/changeset/206549
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug