URLParser should ignore tabs in authority https://bugs.webkit.org/show_bug.cgi?id=162694

Reviewed by Geoffrey Garen.

Source/WebCore:

Covered by new API tests.

* platform/URLParser.cpp:
(WebCore::URLParser::parseAuthority):

Tools:

* TestWebKitAPI/Tests/WebCore/URLParser.cpp:
(TestWebKitAPI::TEST_F):



Canonical link: https://commits.webkit.org/180641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206549 268f45cc-cd09-0410-ab3c-d52691b4dbfc